Closed Bug 1482116 Opened 6 years ago Closed 6 years ago

Potential null deref when setting CDM

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- wontfix
firefox61 --- wontfix
firefox62 --- wontfix
firefox63 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

We have: https://searchfox.org/mozilla-central/source/dom/media/MediaFormatReader.cpp#1477 which schedule an update regardless of a track being present or not. This could cause null-deref depending where in the timeline we are. This can be easily reproduced by setting in a debug build MediaFormatReader:5 logging and running the test dom/media/test/test_eme_autoplay.html
Add assertion to more easily catch the problem
Comment on attachment 8998856 [details] Bug 1482116 - Only schedule update when a track exists. r?bryce Bryce Seager van Dyk (:bryce) has approved the revision.
Attachment #8998856 - Flags: review+
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/bb68137ed8a9 Only schedule update when a track exists. r=bryce
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
I'm assuming this can ride the trains, but feel free to request branch approvals if you feel like it should be uplifted.
Assignee: nobody → jyavenard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: