Bug 1482116 - Only schedule update when a track exists. r=bryce

Add assertion to more easily catch the problem

Differential Revision: https://phabricator.services.mozilla.com/D3018